--- a/mypod_client/pubspec.yaml
+++ b/mypod_client/pubspec.yaml
@@ -2,7 +2,8 @@ name: mypod_client
 description: Starting point for a Serverpod client.
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
   serverpod_client: 2.0.1
+  serverpod_auth_client: ^2.0.0
