--- a/mypod_server/pubspec.yaml
+++ b/mypod_server/pubspec.yaml
@@ -4,10 +4,11 @@ description: Starting point for a Serverpod server.
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
   serverpod: 2.0.1
+  serverpod_auth_server: 2.0.1
 
 dev_dependencies:
-  lints: '>=3.0.0 <5.0.0'
+  lints: ">=3.0.0 <5.0.0"
